# epione

./: .gitignore  .readthedocs.yml  README.md  build_cython.py  pyproject.toml  setup_cython.py
.github/workflows/: ci.yml
epione/: __init__.py
epione/align/: __init__.py  _common.py  _env.py  atac.py  fastq.py  pipeline.py
epione/bulk/: __init__.py  _bigwig.py  _env.py  _fastq2frags.py  _footprint_archr.py  _getScorePerBigWigBin.py  _mapreduce.py  _motif.py
epione/core/: __init__.py  _findgenes.py  _sampling.py  motifs.py
epione/data/: __init__.py  genomes.py
epione/datasets/: __init__.py
epione/hic/: __init__.py  build.py  correct.py  plot.py
epione/io/: __init__.py  _helpers.py  _read.py
epione/pl/: __init__.py  _base.py  _contact.py  _differential.py  _distance.py  _embedding.py  _metric.py  _motif.py  _peak2gene.py
epione/pp/: __init__.py  _data.py  _metric.py  _neighbors.py  _qc.py
epione/sc_hic/: __init__.py  embed.py  impute.py  io.py  plot.py
epione/single/: __init__.py  _bam_split.py  _call_peaks.py  _pseudobulk.py
epione/tl/: __init__.py  _atacorrect.py  _background_peaks.py  _bindetect.py  _bindetect_functions.py  _chromvar.py  _clusters.py  _coaccessibility.py  _differential.py  _footprint.py  _gene_score.py  _integrate.py  _iterative_lsi.py  _joint_embedding.py  _leiden.py  _marker_features.py  _motif_database.py  _motif_matrix.py  _motif_tools.py  _multi_scale_footprint.py  _multi_scale_footprint_plot.py  _multi_scale_region.py  _network_tools.py  _peak_to_gene.py  _reducedimension.py  _score_bigwig.py  _transfer_labels.py  _umap.py
epione/upstream/: __init__.py  _common.py  _env.py  _pairs.py  bigwig.py  bowtie2.py  bwa_mem2.py  macs2.py  pipeline.py  reference.py  samtools.py
epione/utils/: __init__.py  _bindetect.py  _bindetect_functions.py  _call_peaks.py  _compat.py  _findgenes.py  _footprint_cython.c  _footprint_cython.pyx  _genome.py  _io.py  _plotting.py  _plotting_tobias.py  _read.py  console.py  genome.py  logger.py  motifs.py  regions.py  sequences.c  signals.c  utilities.py
epione_guide/: Makefile  changelog.md  conf.py  developer.md  faq.md  index.md  installation.md  references.md  requirements.txt  t_bulk_visualize.ipynb
epione_guide/api/: index.md
tests/: test_align_env.py  test_bulk_bigwig.py  test_bulk_hic.py  test_bulk_hic_compartments.py  test_bulk_hic_insulation.py  test_bulk_hic_loops.py  test_chromvar.py  test_coaccessibility.py  test_hic.py  test_imports.py  test_iterative_lsi.py  test_marker_features.py  test_peak_to_gene.py  test_pl_differential.py  test_sc_hic.py  test_single_hic.py  test_single_hic_demux.py  test_tl_differential.py  test_upstream_env.py  test_utils_sampling.py
(+43 files in other folders)
